# k8s-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INTEGRATION_TESTING.md  PROJECT_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  TOOLS_SPEC.md
examples/: README.md  claude_desktop_config.read_only.json  claude_desktop_config.with_writes.json
src/k8s_mcp_server/: __init__.py  __main__.py  config.py  server.py
src/k8s_mcp_server/kube/: __init__.py  client.py  safe.py
src/k8s_mcp_server/tools/: __init__.py  _registry.py  deployments.py  describe.py  events.py  logs.py  metrics.py  namespaces.py  nodes.py  pods.py  services.py
src/k8s_mcp_server/utils/: __init__.py  audit.py  formatting.py  k8s_conditions.py  k8s_events.py
tests/: conftest.py  test_config.py  test_examples.py  test_registry.py  test_security.py
tests/integration/: test_kind_smoke.py
tests/test_kube/: test_client.py  test_safe.py
tests/test_tools/: test_deployments.py  test_describe.py  test_events.py  test_logs.py  test_metrics.py  test_namespaces.py  test_nodes.py  test_pods.py  test_services.py
tests/test_utils/: test_formatting.py  test_k8s_conditions.py  test_k8s_events.py
