[project]
name = "kubernetes-mcp"
version = "0.1.0"
description = "An MCP server exposing Kubernetes cluster operations to AI assistants."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sarah Salah", email = "sarah.salah.rizk@gmail.com" }]
requires-python = ">=3.13"
keywords = ["mcp", "kubernetes", "k8s", "anthropic", "ai", "llm", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2,<2",
    "kubernetes>=31,<33",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
k8s-mcp-server = "k8s_mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/Sarah-Salah/k8s-mcp-server"
Repository = "https://github.com/Sarah-Salah/k8s-mcp-server"
Issues = "https://github.com/Sarah-Salah/k8s-mcp-server/issues"
Changelog = "https://github.com/Sarah-Salah/k8s-mcp-server/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8s_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "N"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: requires a real Kubernetes cluster (see docs/INTEGRATION_TESTING.md)",
]
